src/components/mainMenu/MainMenu.css
.main-container {
    background-color: #FFFFFF;
    color: #000000;
    display: flex;
    height: 100vh;
    width: 100vw;
    margin: 0px;
    padding: 0px;
}

/* order view screen */
.order-view-screen {
    display: flex;
    flex-direction: column;
    width: 35%;
    max-width: 500px;
    border: 1px solid #000000;
    height: 99.9vh;
}

.title-view {
    border-bottom: 1px solid #000000;
    font-weight: bold;
    text-align: center;
    font-size: 1.5rem;
}

/* Selected Menu */

.order-items-selected {
    height: 90%;
}

.selected-item {
    font-size: 1.3rem;
    border-bottom: 1px solid black;
    padding-bottom: 5px;
}

.selected-item p {
    margin: 0;
    margin-left: 5px;
}

.pic-edit-price-section {
    /* border: 1px solid red; */
    display: flex;
    /* justify-content: center; */
    align-items: center;
    padding: 0 5px;
}

.pic-edit-price-section img {
    /* border: 10px solid blue; */
    margin-right: 10px;
}

.quantity-edit {
    /* border: 1px solid yellow; */
    width: 40%;
    font-size: 1.3rem;
}

.quantity-edit p {
    margin-bottom: 0;
}

.quantity-edit button {
    background-color: #009E00;
    color: #FFFFFF;
    font-size: 1.2rem;
    padding: 0 28px;
    border: 4px solid lightgrey;
}

.price-selected {
    font-weight: bold;
    font-size: 1.4rem;
    /* border: 1px solid blue; */
    width: 40%;
    display: flex;
    justify-content: end;
}

/* buttons SubTotal Cancel Pay */

.sub-total-div {
    font-size: 1.4rem;
    display: flex;
    justify-content: space-between;
    height: 100px;
    padding-left: 10px;
    padding-right: 10px;
    font-weight: 500;
    border-style: solid;
    border-width: 2px 0px;
}

.btn-cancel {
    background-color: #0077BD;
    color: #FFFFFF;
    font-weight: bold;
    text-align: center;
    font-size: 1.4rem;
    border-bottom: 1px solid #000000;
}

.btn-pay {
    background-color: #009E00;
    color: #FFFFFF;
    font-weight: bold;
    text-align: center;
    font-size: 1.4rem;
    bottom: 0;
}

/* food card container */
.food-items-container {
    border: 1px solid red;
    background-color: lightblue;
    width: 73%;
    max-width: 95vw;
    display: flex;
    flex-direction: column;
}

.top-row-items {
    border: 2px solid purple;
    height: 65%;
    display: inline-flex;
}

.bot-row-items {
    height: 35%;
    display: inline-flex;
}

.food-items-container > :first-child {
    /* padding-right: 5px; */
}

.single-items {
    border: 2px dotted green;
    display: flex;
    flex-wrap: wrap;
    gap: 1em;
    width: 50%;
    padding: 1em 0px 0em 1em;
}

.first-container {
    /* border: 2px solid yellow; */
    width: 70%;
    gap: 2em;
}

